--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
-      # Docker build & Pusha
+      # Docker build & Push
       - name: Build Docker Image
         run: docker build -t ${{ secrets.DOCKER_USERNAME }}/hyun .
 
