--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,9 +79,10 @@ jobs:
           # 도커 작업
           script: |
             sudo docker rm -f $(docker ps -qa)
+            sudo docker rm -f ${{ secrets.DOCKER_USERNAME }}/hyun:latest
             sudo docker pull ${{secrets.DOCKER_USERNAME}}/hyun:latest
             sudo docker-compose up -d
-            sudo docker image prune -f
+            sudo docker image prune -a -f
 #            sudo docker stop $(sudo docker ps -a -q)
 #            sudo docker run -d --log-driver=syslog -p 8080:8080 ${{ secrets.DOCKER_USERNAME }}/hyun:latest
 #            sudo docker rm $(sudo docker ps --filter 'status=exited' -a -q)
