--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,8 +78,8 @@ jobs:
           key: ${{ secrets.EC2_PRIVATE_KEY }} # pem 키
           # 도커 작업
           script: |
-            sudo docker rm -f $(docker ps -qa)
-            sudo docker rm -f ${{ secrets.DOCKER_USERNAME }}/hyun:latest
+#            sudo docker rm -f $(docker ps -qa)
+#            sudo docker rmi -f ${{ secrets.DOCKER_USERNAME }}/hyun:latest
             sudo docker pull ${{secrets.DOCKER_USERNAME}}/hyun:latest
             sudo docker-compose up -d
             sudo docker image prune -a -f
