--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,8 +29,9 @@ jobs:
       # yml
       - name: Create and Upload application.yml
         run: |
-          touch ./src/main/resources/application.yml
-          echo -e "${{secrets.APPLICATION}}" | base64 --decode > ./src/main/resources/application.yml
+          cd ./src/main/resources
+          touch ./application.yml
+          echo -e "${{secrets.APPLICATION}}" | base64 --decode > ./application.yml
       - uses: actions/upload-artifact@v4
         with:
           name: application.yml
@@ -38,14 +39,15 @@ jobs:
 #          retention-days:
 
       # sql
-      - name: Create and Upload data.sql
-        run: |
-          touch ./src/main/resources/data.sql
-          echo -e "${{secrets.DATA_SQL}}" | base64 --decode > ./src/main/resources/data.sql
-      - uses: actions/upload-artifact@v4
-        with:
-          name: data.sql
-          path: ./src/main/resources/data.sql
+#      - name: Create and Upload data.sql
+#        run: |
+#          cd ./src/main/resources
+#          touch /data.sql
+#          echo -e "${{secrets.DATA_SQL}}" | base64 --decode > /data.sql
+#      - uses: actions/upload-artifact@v4
+#        with:
+#          name: data.sql
+#          path: ./src/main/resources/data.sql
 
       # Configure Gradle for optimal use in GiHub Actions, including caching of downloaded dependencies.
       - name: Setup Gradle
@@ -77,10 +79,10 @@ jobs:
           username: ubuntu
           key: ${{ secrets.EC2_PRIVATE_KEY }} # pem 키
           script: |
+            sudo docker rm -f $(docker ps -qa)
             sudo docker pull ${{secrets.DOCKER_USERNAME}}/hyun:latest
             sudo docker-compose up -d
             sudo docker image prune -a -f
-#            sudo docker rm -f $(docker ps -qa)
 #            sudo docker rmi -f ${{ secrets.DOCKER_USERNAME }}/hyun:latest
 
 #            sudo docker stop $(sudo docker ps -a -q)
