--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,19 +23,19 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: Git Checkout
-        uses: actions/checkout@v4
-
-      # yml
-      - name: Create and Upload application.yml
-        run: |
-          cd ./src/main/resources
-          touch ./application.yml
-          echo -e "${{secrets.APPLICATION}}" | base64 --decode > ./application.yml
-      - uses: actions/upload-artifact@v4
-        with:
-          name: application.yml
-          path: ./src/main/resources/application.yml
+#      - name: Git Checkout
+#        uses: actions/checkout@v4
+#
+#      # yml
+#      - name: Create and Upload application.yml
+#        run: |
+#          cd ./src/main/resources
+#          touch ./application.yml
+#          echo -e "${{secrets.APPLICATION}}" | base64 --decode > ./application.yml
+#      - uses: actions/upload-artifact@v4
+#        with:
+#          name: application.yml
+#          path: ./src/main/resources/application.yml
 #          retention-days:
 
       # sql
