--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,31 +23,31 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-#      - name: Git Checkout
-#        uses: actions/checkout@v4
-#
-#      # yml
-#      - name: Create and Upload application.yml
-#        run: |
-#          cd ./src/main/resources
-#          touch ./application.yml
-#          echo -e "${{secrets.APPLICATION}}" | base64 --decode > ./application.yml
-#      - uses: actions/upload-artifact@v4
-#        with:
-#          name: application.yml
-#          path: ./src/main/resources/application.yml
-#          retention-days:
+      - name: Git Checkout
+        uses: actions/checkout@v4
 
-      # sql
-#      - name: Create and Upload data.sql
-#        run: |
-#          cd ./src/main/resources
-#          touch /data.sql
-#          echo -e "${{secrets.DATA_SQL}}" | base64 --decode > /data.sql
-#      - uses: actions/upload-artifact@v4
-#        with:
-#          name: data.sql
-#          path: ./src/main/resources/data.sql
+      # yml
+      - name: Create and Upload application.yml
+        run: |
+          cd ./src/main/resources
+          touch ./application.yml
+          echo -e "${{secrets.APPLICATION}}" | base64 --decode > ./application.yml
+      - uses: actions/upload-artifact@v4
+        with:
+          name: application.yml
+          path: ./src/main/resources/application.yml
+          retention-days:
+
+      #sql
+      - name: Create and Upload data.sql
+        run: |
+          cd ./src/main/resources
+          touch /data.sql
+          echo -e "${{secrets.DATA_SQL}}" | base64 --decode > /data.sql
+      - uses: actions/upload-artifact@v4
+        with:
+          name: data.sql
+          path: ./src/main/resources/data.sql
 
       # Configure Gradle for optimal use in GiHub Actions, including caching of downloaded dependencies.
       - name: Setup Gradle
@@ -71,7 +71,7 @@ jobs:
       - name: Push to Docker Hub
         run: docker push ${{ secrets.DOCKER_USERNAME }}/hyun
 
-      # EC2 배포ㅁ
+      # EC2 배포
       - name: Docker image pull & Deploy to EC2
         uses: appleboy/ssh-action@master
         with:
