--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,30 +26,23 @@ jobs:
       - name: Git Checkout
         uses: actions/checkout@v4
 
-#      # yml
-#      - name: Create and Upload application.yml
-#        run: |
-#          touch ./src/main/resources/application.yml
-#          echo -e "${{secrets.APPLICATION}}" | base64 --decode > ./src/main/resources/application.yml
-#      - uses: actions/upload-artifact@v4
-#        with:
-#          name: application.yml
-#          path: ./src/main/resources/application.yml
-#          retention-days:
-      - name: Set YML
+      # yml
+      - name: Create and Upload application.yml
         run: |
-          echo "${{ secrets.APPLICATION }}" | base64 --decode > src/main/resources/application.yml
-          find src
+          touch ./src/main/resources/application.yml
+          echo -e "${{secrets.APPLICATION}}" | base64 --decode > ./src/main/resources/application.yml
+      - uses: actions/upload-artifact@v4
+        with:
+          name: application.yml
+          path: ./src/main/resources/application.yml
+          retention-days:
 
-      #sql
-#      - name: Create and Upload data.sql
+#      - name: Set YML
 #        run: |
-#          touch ./src/main/resources/data.sql
-#          echo -e "${{secrets.DATA_SQL}}" | base64 --decode > ./src/main/resources/data.sql
-#      - uses: actions/upload-artifact@v4
-#        with:
-#          name: data.sql
-#          path: ./src/main/resources/data.sql
+#          echo "${{ secrets.APPLICATION }}" | base64 --decode > src/main/resources/application.yml
+#          find src
+
+
 
       # Configure Gradle for optimal use in GiHub Actions, including caching of downloaded dependencies.
       - name: Setup Gradle
